# DB2024-Backend

./: Dockerfile  README.md  docker-compose.yml  domain.md  example.env  pyproject.toml
src/messier/: celeryconfig.py
src/messier/application/: __init__.py
src/messier/application/attach_person_to_telegram_account/: __init__.py  dto.py  use_case.py
src/messier/application/authorize/: __init__.py  dto.py  use_case.py
src/messier/application/common/: dto.py
src/messier/application/confirm_identification/: __init__.py  dto.py  use_case.py
src/messier/application/create_utm/: __init__.py  dto.py  use_case.py
src/messier/application/edit_person/: __init__.py  dto.py  use_case.py
src/messier/application/get_education_materials/: use_case.py
src/messier/application/get_my_achievements/: __init__.py  dto.py  use_case.py
src/messier/application/get_tags/: dto.py  use_case.py
src/messier/application/login/: __init__.py  dto.py  use_case.py
src/messier/application/merge_telegram_account/: __init__.py  dto.py  use_case.py
src/messier/application/passthrough/: impl.py
src/messier/application/read_utm/: __init__.py  dto.py  use_case.py
src/messier/infrastructure/: __init__.py  config.py  database.py  interactor_factory.py  models.py  observer.py  relational_entity.py  repo.py  text.py  use_case.py  utils.py  uuid.py
src/messier/main/: api.py  telegram.py
src/random_coffee/: celeryconfig.py
src/random_coffee/infrastructure/: database.py  models.py  relational_entity.py  repo.py  service.py  use_case.py
src/random_coffee/main/: api.py  telegram.py
(+269 files in other folders)
