[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "random_coffee"
version = "0.0.1"
dependencies = [
    "fastapi~=0.103.0",
    "python-multipart~=0.0.6",
    "python-jose~=3.3.0",
    "bcrypt==4.0.1",  # https://github.com/pyca/bcrypt/issues/684
    "passlib[bcrypt]~=1.7.4",
    "pydantic[email]~=2.0",
    "pydantic-settings~=2.0.3",
    "SQLAlchemy~=2.0.2",
    "uvicorn==0.21.1",
    "dataclass-factory~=2.16",
    "python-dotenv~=1.0.0",
    "asyncpg~=0.27.0",
    "sqladmin~=0.15.0",
    "itsdangerous~=2.1",
    "celery~=5.3.1",
    "redis~=5.0.1",
    "requests~=2.31.0",
    "aiogram>=3",
    "di[anyio]~=0.76.0",  # warning: minor version bump can contain breaking changes (from documention)
    "transliterate~=1.10.2",
    "psycopg",
    "greenlet",
    "apscheduler",
]


[project.optional-dependencies]
test = [
    "pytest~=7.2.2",
    "pytest-asyncio~=0.20.3",
]
migrations = [
    "alembic",
    "psycopg2~=2.9.6",
]


[project.scripts]
random-coffee-api = "random_coffee.main.api:main"
random-coffee-telegram = "random_coffee.main.telegram:main"